major changes and adaptivity