@@ -22,33 +22,34 @@ import java.io.IOException;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Random;
 
+import org.apache.storm.Config;
+import org.apache.storm.LocalCluster;
+import org.apache.storm.generated.AlreadyAliveException;
+import org.apache.storm.generated.GlobalStreamId;
+import org.apache.storm.generated.InvalidTopologyException;
+import org.apache.storm.grouping.CustomStreamGrouping;
+import org.apache.storm.metric.LoggingMetricsConsumer;
+import org.apache.storm.spout.SpoutOutputCollector;
+import org.apache.storm.task.OutputCollector;
+import org.apache.storm.task.TopologyContext;
+import org.apache.storm.task.WorkerTopologyContext;
+import org.apache.storm.topology.OutputFieldsDeclarer;
+import org.apache.storm.topology.TopologyBuilder;
+import org.apache.storm.topology.base.BaseRichBolt;
+import org.apache.storm.topology.base.BaseRichSpout;
+import org.apache.storm.tuple.Fields;
+import org.apache.storm.tuple.Tuple;
+import org.apache.storm.tuple.Values;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import backtype.storm.Config;
-import backtype.storm.LocalCluster;
-import backtype.storm.generated.AlreadyAliveException;
-import backtype.storm.generated.GlobalStreamId;
-import backtype.storm.generated.Grouping;
-import backtype.storm.generated.InvalidTopologyException;
-import backtype.storm.grouping.CustomStreamGrouping;
-import backtype.storm.spout.SpoutOutputCollector;
-import backtype.storm.task.OutputCollector;
-import backtype.storm.task.TopologyContext;
-import backtype.storm.task.WorkerTopologyContext;
-import backtype.storm.topology.OutputFieldsDeclarer;
-import backtype.storm.topology.TopologyBuilder;
-import backtype.storm.topology.base.BaseRichBolt;
-import backtype.storm.topology.base.BaseRichSpout;
-import backtype.storm.tuple.Fields;
-import backtype.storm.tuple.Tuple;
-import backtype.storm.tuple.Values;
 import edu.purdue.cs.tornado.SpatioTextualLocalCluster;
 import edu.purdue.cs.tornado.SpatioTextualToplogySubmitter;
 import edu.purdue.cs.tornado.helper.SpatioTextualConstants;
@@ -92,6 +93,7 @@ public class WordCountTopology {
 		Random _rand;
 		Boolean reliable;
 		OutputCollector collector;
+		int i;
 
 		public SplitSentence() {
 			// super("python", "splitsentence.py");
@@ -112,19 +114,25 @@ public class WordCountTopology {
 			this.reliable = ((Long) stormConf.get(Config.TOPOLOGY_ACKER_EXECUTORS)) > 0;
 			this.collector = collector;
 			_rand = new Random();
+			i=0;
 
 		}
 
 		@Override
 		public void execute(Tuple input) {
-			String sen = input.getString(0);
-			String[] words = sen.split(" ");
-			String word = words[_rand.nextInt(words.length)];
+			String[] words = input.getString(0).split(" ");
+//			i++;
+//			if(i==100000){
+//				System.gc();
+//				i=0;
+//			}
 			if (reliable) {
-				collector.emit(input, new Values(word));
+				collector.emit(input, new Values(words[_rand.nextInt(words.length)]));
+				//collector.emit(input, new Values(input.getString(0)));
 				collector.ack(input);
 			} else {
-				collector.emit(new Values(word));
+				//collector.emit(new Values(input.getString(0)));
+				collector.emit(new Values(words[_rand.nextInt(words.length)]));
 			}
 
 		}
@@ -135,6 +143,7 @@ public class WordCountTopology {
 		Random _rand;
 		Boolean reliable;
 		String[] sentences ;
+		int i=0;
 		@Override
 		public void open(Map conf, TopologyContext context, SpoutOutputCollector collector) {
 			_collector = collector;
@@ -142,11 +151,17 @@ public class WordCountTopology {
 			 sentences = new String[] { "the cow jumped over the moon", "an apple a day keeps the doctor away", "four score and seven years ago", "snow white and the seven dwarfs", "i am at two with nature" };
 			
 			this.reliable = ((Long) conf.get(Config.TOPOLOGY_ACKER_EXECUTORS)) > 0;
+			i=0;
 		}
 
 		@Override
 		public void nextTuple() {
 			//	Utils.sleep(100);
+//			i++;
+//			if(i==100000){
+//				System.gc();
+//				i=0;
+//			}
 			String sentence = sentences[_rand.nextInt(sentences.length)];
 			if (reliable) {
 				_collector.emit(new Values(sentence), 5);
@@ -176,6 +191,7 @@ public class WordCountTopology {
 		OutputCollector collector;
 		Random _rand;
 		Boolean reliable;
+		int i;
 
 		@Override
 		public void declareOutputFields(OutputFieldsDeclarer declarer) {
@@ -186,6 +202,7 @@ public class WordCountTopology {
 		public void prepare(Map stormConf, TopologyContext context, OutputCollector collector) {
 			this.collector = collector;
 			this.reliable = ((Long) stormConf.get(Config.TOPOLOGY_ACKER_EXECUTORS)) > 0;
+			i=0;
 		}
 
 		@Override
@@ -195,6 +212,12 @@ public class WordCountTopology {
 			if (count == null)
 				count = 0;
 			count++;
+//			i++;
+//			if(i==100000){
+//				System.gc();
+//				i=0;
+//			}
+			for(int i =1;i<1000;i++)
 			counts.put(word, count);
 			collector.emit(new Values(word, count));
 			if (reliable)
@@ -219,9 +242,9 @@ public class WordCountTopology {
 		TopologyBuilder builder = new TopologyBuilder();
 
 		builder.setSpout("spout", new RandomSentenceSpout(), Integer.parseInt(properties.getProperty("SPOUT_PARALLEISM").trim()));
-		//builder.setBolt("split", new SplitSentence(), Integer.parseInt(properties.getProperty("ROUTING_PARALLEISM").trim())).shuffleGrouping("spout");
-		builder.setBolt("split", new SplitSentence(), Integer.parseInt(properties.getProperty("ROUTING_PARALLEISM").trim())).customGrouping("spout", new CustomGroup());
-		//		builder.setBolt("count", new WordCount(), Integer.parseInt(properties.getProperty("EVALUATOR_PARALLEISM").trim())).shuffleGrouping("split");
+		builder.setBolt("split", new SplitSentence(), Integer.parseInt(properties.getProperty("ROUTING_PARALLEISM").trim())).shuffleGrouping("spout");
+		//builder.setBolt("split", new SplitSentence(), Integer.parseInt(properties.getProperty("ROUTING_PARALLEISM").trim())).customGrouping("spout", new CustomGroup());
+		builder.setBolt("count", new WordCount(), Integer.parseInt(properties.getProperty("EVALUATOR_PARALLEISM").trim())).shuffleGrouping("split");
 
 		Config conf = new Config();
 		conf.setDebug(false);
@@ -235,14 +258,18 @@ public class WordCountTopology {
 		} else {
 
 			conf.put(Config.JAVA_LIBRARY_PATH, "/home/tornadojars/:/usr/local/lib:/opt/local/lib:/usr/lib");
-			conf.put(Config.WORKER_CHILDOPTS, "-Xmx6g");
+			//conf.put(Config.TOPOLOGY_WORKER_CHILDOPTS, "-Dcom.sun.management.jmxremote  -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -javaagent:/home/staticdata/CustomAgent%ID%.jar ");
+			conf.put(Config.TOPOLOGY_WORKER_CHILDOPTS, " -XX:+PrintGCDetails -verbose:gc -Xloggc:/home/apache-storm-1.0.0/logs/gc-storm-worker-%ID%-"+(new Date()).getTime()+".log  -XX:+PrintGCTimeStamps -XX:GCLogFileSize=10M -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/home/apache-storm-1.0.0/logs/heapdump ");
+			
+			conf.put(Config.STORM_ZOOKEEPER_SESSION_TIMEOUT, 300000);
+			conf.put(Config.STORM_ZOOKEEPER_CONNECTION_TIMEOUT, 300000);
+			conf.registerMetricsConsumer(LoggingMetricsConsumer.class, 1);
 			conf.put(Config.NIMBUS_HOST, nimbusHost);
-
 			conf.put(Config.NIMBUS_THRIFT_PORT, nimbusPort);
 			conf.put(Config.STORM_ZOOKEEPER_PORT, Integer.parseInt(properties.getProperty(SpatioTextualConstants.STORM_ZOOKEEPER_PORT)));
 			ArrayList<String> zookeeperServers = new ArrayList(Arrays.asList(properties.getProperty(SpatioTextualConstants.STORM_ZOOKEEPER_SERVERS).split(",")));
 			conf.put(Config.STORM_ZOOKEEPER_SERVERS, zookeeperServers);
-			conf.setNumWorkers(Integer.parseInt(properties.getProperty(SpatioTextualConstants.STORM_NUMBER_OF_WORKERS).trim()));
+			conf.setNumWorkers(20);//Integer.parseInt(properties.getProperty(SpatioTextualConstants.STORM_NUMBER_OF_WORKERS).trim()));
 			System.setProperty("storm.jar", properties.getProperty(SpatioTextualConstants.STORM_JAR_PATH));
 			try {
 				SpatioTextualToplogySubmitter.submitTopology("wordcount", conf, builder.createTopology());
